# grovvy

./: .cache  .gitignore  README.md  app.py  pyproject.toml  spotify_auth.py
static/style/: dashboard.css  index.css
templates/: dashboard.html  index.html
